force-app/main/default/objects/IT_Arbeit__c/IT_Arbeit__c.object-meta.xml
<CustomObject>
    <label>IT Arbeit</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Arbeit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Arbeit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>