force-app/main/default/objects/IT_Arbeit__c/fields/Sorun_Giderildi__c.field-meta.xml
<CustomField>
    <fullName>Sorun_Giderildi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sorun Giderildi</label>
    <type>Checkbox</type>
</CustomField>