force-app/main/default/objects/IT_Arbeit__c/fields/Sorun_GIDERILMEDI__c.field-meta.xml
<CustomField>
    <fullName>Sorun_GIDERILMEDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sorun GIDERILMEDI</label>
    <type>Checkbox</type>
</CustomField>