force-app/main/default/objects/IT_Arbeit__c/fields/Teknik_Personel__c.field-meta.xml
<CustomField>
    <fullName>Teknik_Personel__c</fullName>
    <label>Teknik Personel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mevlüt Bey</fullName>
            </value>
            <value>
                <fullName>Oğuzhan Bey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>