force-app/main/default/objects/IT_Arbeit__c/fields/Yap_lan_i_ler__c.field-meta.xml
<CustomField>
    <fullName>Yap_lan_i_ler__c</fullName>
    <label>Yapılan işler</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>