force-app/main/default/objects/IT_Arbeit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Tarih__c</columns>
    <columns>Yap_lan_i_ler__c</columns>
    <columns>Teknik_Personel__c</columns>
    <columns>Sorun_Giderildi__c</columns>
    <columns>Sorun_GIDERILMEDI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>